--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,56 @@
+/* sets univeral properties for the entire page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* formats body background color for the page */
 body {
     background-color: #d9dcd6;
 }
-
+/* formats the header of the page and assigns fonts and color. */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* formats main header with an inline block style and font size */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/* changes the color of the span seo  */
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/* formats the nav bar to the top right of the page and assigns margin, padding, font and size */
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/* creates a list style for the items inside the nav bar */
+.header nav ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/* formats positioning of the nav bar items */
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* formats color of hyperlinks */
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/* sets font size for the paragraphs */
 p {
     font-size: 16px;
 }
-
+/* formats the hero element of the page - usually a large image at the center/top of the page or the main part of the page */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,23 +59,23 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* formats layout of the page - makes element float to the left of its container */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* formats layout and makes element float to the right of its container */
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/* assings layout and formatting for the content within the main part of the page */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* formats the cards to display properly on the page */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,56 +86,24 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+/* assigns margins and text color to the aside elements */
+.benefits section{
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* formats margin and the text style of the aside elements */
+.benefits section h3{
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* formats the image layout of the elements in the aside */
+.benefits section img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+/* formats the layout and style of the cards in the main section */
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -142,59 +111,23 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* formats the img size for the contents of the article */
+.content article img {
     max-height: 200px;
 }
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+/* formats layout and font size of the content in the cards */
+.content article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* formats footer layout and position */
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/* formats font size for the footer element */
 .footer h2 {
     font-size: 20px;
 }
